// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser doctype 1`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 103,
      "endLine": 1,
      "endOffset": 102,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\" \\"http://www.w3.org/TR/html4/loose.dtd\\">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "http://www.w3.org/TR/html4/loose.dtd",
      "type": "doctype",
    },
  ],
}
`;

exports[`parser doctype 2`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 64,
      "endLine": 1,
      "endOffset": 63,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "",
      "type": "doctype",
    },
  ],
}
`;

exports[`parser doctype 3`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`parser doctype 4`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "attributes": Array [],
      "endCol": 7,
      "endLine": 1,
      "endOffset": 6,
      "endSpace": Object {
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
        "raw": "",
        "startCol": 6,
        "startLine": 1,
        "startOffset": 5,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "<html>",
      "selfClosingSolidus": Object {
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
        "raw": "",
        "startCol": 6,
        "startLine": 1,
        "startOffset": 5,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 14,
      "endLine": 1,
      "endOffset": 13,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "</html>",
      "startCol": 7,
      "startLine": 1,
      "startOffset": 6,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
  ],
}
`;

exports[`parser html parser difference 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`parser invalid tag 1`] = `
Object {
  "isFragment": true,
  "nodeList": Array [
    Object {
      "attributes": Array [
        Object {
          "endCol": 20,
          "endLine": 1,
          "endOffset": 20,
          "endQuote": Object {
            "endCol": 20,
            "endLine": 1,
            "endOffset": 20,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 1,
            "startOffset": 19,
          },
          "equal": Object {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "=",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "isInvalid": true,
          "name": Object {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "[*ngIf]",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "potentialName": "ngIf",
          "raw": "[*ngIf]=\\"1 === 1\\"",
          "spacesAfterEqual": Object {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "",
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "spacesBeforeEqual": Object {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "spacesBeforeName": Object {
            "endCol": 3,
            "endLine": 1,
            "endOffset": 3,
            "raw": "",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "startCol": 3,
          "startLine": 1,
          "startOffset": 3,
          "startQuote": Object {
            "endCol": 12,
            "endLine": 1,
            "endOffset": 12,
            "raw": "\\"",
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 19,
            "endLine": 1,
            "endOffset": 19,
            "raw": "1 === 1",
            "startCol": 12,
            "startLine": 1,
            "startOffset": 12,
          },
        },
        Object {
          "endCol": 38,
          "endLine": 1,
          "endOffset": 38,
          "endQuote": Object {
            "endCol": 38,
            "endLine": 1,
            "endOffset": 38,
            "raw": "\\"",
            "startCol": 37,
            "startLine": 1,
            "startOffset": 37,
          },
          "equal": Object {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "=",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "isDuplicatable": false,
          "isInvalid": true,
          "name": Object {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "ng-*-if",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "potentialName": "ng--if",
          "raw": "ng-*-if=\\"2 === 2\\"",
          "spacesAfterEqual": Object {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "",
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "spacesBeforeEqual": Object {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "spacesBeforeName": Object {
            "endCol": 21,
            "endLine": 1,
            "endOffset": 21,
            "raw": "",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "startCol": 21,
          "startLine": 1,
          "startOffset": 21,
          "startQuote": Object {
            "endCol": 30,
            "endLine": 1,
            "endOffset": 30,
            "raw": "\\"",
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 37,
            "endLine": 1,
            "endOffset": 37,
            "raw": "2 === 2",
            "startCol": 30,
            "startLine": 1,
            "startOffset": 30,
          },
        },
        Object {
          "endCol": 48,
          "endLine": 1,
          "endOffset": 48,
          "endQuote": Object {
            "endCol": 48,
            "endLine": 1,
            "endOffset": 48,
            "raw": "\\"",
            "startCol": 47,
            "startLine": 1,
            "startOffset": 47,
          },
          "equal": Object {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "=",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "isDuplicatable": false,
          "isInvalid": true,
          "name": Object {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "href",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "potentialName": "href",
          "raw": "href=\\"{{\\"",
          "spacesAfterEqual": Object {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "",
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "spacesBeforeEqual": Object {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "spacesBeforeName": Object {
            "endCol": 39,
            "endLine": 1,
            "endOffset": 39,
            "raw": "",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "startCol": 39,
          "startLine": 1,
          "startOffset": 39,
          "startQuote": Object {
            "endCol": 45,
            "endLine": 1,
            "endOffset": 45,
            "raw": "\\"",
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 47,
            "endLine": 1,
            "endOffset": 47,
            "raw": "{{",
            "startCol": 45,
            "startLine": 1,
            "startOffset": 45,
          },
        },
        Object {
          "endCol": 79,
          "endLine": 1,
          "endOffset": 79,
          "endQuote": Object {
            "endCol": 79,
            "endLine": 1,
            "endOffset": 79,
            "raw": "\\"",
            "startCol": 78,
            "startLine": 1,
            "startOffset": 78,
          },
          "equal": Object {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "=",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "isDuplicatable": false,
          "isInvalid": true,
          "name": Object {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "download",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "potentialName": "download",
          "raw": "download=\\"{ { downloadUrl } }\\"",
          "spacesAfterEqual": Object {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "",
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "spacesBeforeEqual": Object {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "spacesBeforeName": Object {
            "endCol": 49,
            "endLine": 1,
            "endOffset": 49,
            "raw": "",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "startCol": 49,
          "startLine": 1,
          "startOffset": 49,
          "startQuote": Object {
            "endCol": 59,
            "endLine": 1,
            "endOffset": 59,
            "raw": "\\"",
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 78,
            "endLine": 1,
            "endOffset": 78,
            "raw": "{ { downloadUrl } }",
            "startCol": 59,
            "startLine": 1,
            "startOffset": 59,
          },
        },
      ],
      "endCol": 83,
      "endLine": 1,
      "endOffset": 82,
      "endSpace": Object {
        "endCol": 82,
        "endLine": 1,
        "endOffset": 81,
        "raw": "",
        "startCol": 82,
        "startLine": 1,
        "startOffset": 81,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "a",
      "raw": "<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" />",
      "selfClosingSolidus": Object {
        "endCol": 82,
        "endLine": 1,
        "endOffset": 81,
        "raw": " /",
        "startCol": 80,
        "startLine": 1,
        "startOffset": 79,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 86,
      "endLine": 1,
      "endOffset": 85,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "</>",
      "startCol": 83,
      "startLine": 1,
      "startOffset": 82,
      "type": "text",
    },
  ],
  "parseError": "Only void and foreign elements can be self closed \\"a\\" (\\"[ERROR ->]<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" /></>\\"): angular-html-parser@0:0
Unexpected closing tag \\"\\". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (\\"<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" />[ERROR ->]</>\\"): angular-html-parser@0:82",
}
`;

exports[`parser parse 1`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 16,
      "endLine": 1,
      "endOffset": 15,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "",
      "raw": "<!DOCTYPE html>",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "",
      "type": "doctype",
    },
    Object {
      "endCol": 9,
      "endLine": 2,
      "endOffset": 24,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 16,
      "startLine": 1,
      "startOffset": 15,
      "type": "text",
    },
    Object {
      "endCol": 72,
      "endLine": 6,
      "endOffset": 403,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<![CDATA[ Within this Character Data block I can use double dashes as
        much as I want (along with <, &, ', and \\") *and* %MyParamEntity; will be
        expanded to the text \\"Has been expanded\\" ... however, I can't use the
        CEND sequence. If I need to use CEND I must escape one of the brackets
        or the greater-than sign using concatenated CDATA sections. ]]>",
      "startCol": 9,
      "startLine": 2,
      "startOffset": 24,
      "type": "comment",
    },
    Object {
      "endCol": 9,
      "endLine": 7,
      "endOffset": 412,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 72,
      "startLine": 6,
      "startOffset": 403,
      "type": "text",
    },
    Object {
      "endCol": 35,
      "endLine": 7,
      "endOffset": 438,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- top level comment -->",
      "startCol": 9,
      "startLine": 7,
      "startOffset": 412,
      "type": "comment",
    },
    Object {
      "endCol": 9,
      "endLine": 8,
      "endOffset": 447,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 35,
      "startLine": 7,
      "startOffset": 438,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 23,
          "endLine": 8,
          "endOffset": 462,
          "endQuote": Object {
            "endCol": 23,
            "endLine": 8,
            "endOffset": 462,
            "raw": "\\"",
            "startCol": 22,
            "startLine": 8,
            "startOffset": 461,
          },
          "equal": Object {
            "endCol": 19,
            "endLine": 8,
            "endOffset": 458,
            "raw": "=",
            "startCol": 18,
            "startLine": 8,
            "startOffset": 457,
          },
          "isDuplicatable": false,
          "isInvalid": false,
          "name": Object {
            "endCol": 18,
            "endLine": 8,
            "endOffset": 457,
            "raw": "lang",
            "startCol": 14,
            "startLine": 8,
            "startOffset": 453,
          },
          "potentialName": "lang",
          "raw": "lang=\\"en\\"",
          "spacesAfterEqual": Object {
            "endCol": 19,
            "endLine": 8,
            "endOffset": 458,
            "raw": "",
            "startCol": 19,
            "startLine": 8,
            "startOffset": 458,
          },
          "spacesBeforeEqual": Object {
            "endCol": 18,
            "endLine": 8,
            "endOffset": 457,
            "raw": "",
            "startCol": 18,
            "startLine": 8,
            "startOffset": 457,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 8,
            "endOffset": 453,
            "raw": "",
            "startCol": 14,
            "startLine": 8,
            "startOffset": 453,
          },
          "startCol": 14,
          "startLine": 8,
          "startOffset": 453,
          "startQuote": Object {
            "endCol": 20,
            "endLine": 8,
            "endOffset": 459,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 8,
            "startOffset": 458,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 22,
            "endLine": 8,
            "endOffset": 461,
            "raw": "en",
            "startCol": 20,
            "startLine": 8,
            "startOffset": 459,
          },
        },
      ],
      "endCol": 25,
      "endLine": 8,
      "endOffset": 463,
      "endSpace": Object {
        "endCol": 24,
        "endLine": 8,
        "endOffset": 462,
        "raw": "",
        "startCol": 24,
        "startLine": 8,
        "startOffset": 462,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "<html lang=\\"en\\">",
      "selfClosingSolidus": Object {
        "endCol": 24,
        "endLine": 8,
        "endOffset": 462,
        "raw": "",
        "startCol": 24,
        "startLine": 8,
        "startOffset": 462,
      },
      "startCol": 9,
      "startLine": 8,
      "startOffset": 447,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 11,
      "endLine": 9,
      "endOffset": 474,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 25,
      "startLine": 8,
      "startOffset": 463,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 17,
      "endLine": 9,
      "endOffset": 480,
      "endSpace": Object {
        "endCol": 16,
        "endLine": 9,
        "endOffset": 479,
        "raw": "",
        "startCol": 16,
        "startLine": 9,
        "startOffset": 479,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "body",
      "raw": "<body>",
      "selfClosingSolidus": Object {
        "endCol": 16,
        "endLine": 9,
        "endOffset": 479,
        "raw": "",
        "startCol": 16,
        "startLine": 9,
        "startOffset": 479,
      },
      "startCol": 11,
      "startLine": 9,
      "startOffset": 474,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 10,
      "endOffset": 493,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 17,
      "startLine": 9,
      "startOffset": 480,
      "type": "text",
    },
    Object {
      "endCol": 34,
      "endLine": 10,
      "endOffset": 514,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- body comment -->",
      "startCol": 13,
      "startLine": 10,
      "startOffset": 493,
      "type": "comment",
    },
    Object {
      "endCol": 13,
      "endLine": 11,
      "endOffset": 527,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 34,
      "startLine": 10,
      "startOffset": 514,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 34,
          "endLine": 11,
          "endOffset": 549,
          "endQuote": Object {
            "endCol": 34,
            "endLine": 11,
            "endOffset": 549,
            "raw": "\\"",
            "startCol": 33,
            "startLine": 11,
            "startOffset": 548,
          },
          "equal": Object {
            "endCol": 26,
            "endLine": 11,
            "endOffset": 541,
            "raw": "=",
            "startCol": 25,
            "startLine": 11,
            "startOffset": 540,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "isInvalid": false,
          "name": Object {
            "endCol": 25,
            "endLine": 11,
            "endOffset": 540,
            "raw": "[type]",
            "startCol": 19,
            "startLine": 11,
            "startOffset": 534,
          },
          "potentialName": "type",
          "raw": "[type]=\\"'text'\\"",
          "spacesAfterEqual": Object {
            "endCol": 26,
            "endLine": 11,
            "endOffset": 541,
            "raw": "",
            "startCol": 26,
            "startLine": 11,
            "startOffset": 541,
          },
          "spacesBeforeEqual": Object {
            "endCol": 25,
            "endLine": 11,
            "endOffset": 540,
            "raw": "",
            "startCol": 25,
            "startLine": 11,
            "startOffset": 540,
          },
          "spacesBeforeName": Object {
            "endCol": 19,
            "endLine": 11,
            "endOffset": 534,
            "raw": "",
            "startCol": 19,
            "startLine": 11,
            "startOffset": 534,
          },
          "startCol": 19,
          "startLine": 11,
          "startOffset": 534,
          "startQuote": Object {
            "endCol": 27,
            "endLine": 11,
            "endOffset": 542,
            "raw": "\\"",
            "startCol": 26,
            "startLine": 11,
            "startOffset": 541,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 33,
            "endLine": 11,
            "endOffset": 548,
            "raw": "'text'",
            "startCol": 27,
            "startLine": 11,
            "startOffset": 542,
          },
        },
      ],
      "endCol": 38,
      "endLine": 11,
      "endOffset": 552,
      "endSpace": Object {
        "endCol": 37,
        "endLine": 11,
        "endOffset": 551,
        "raw": "",
        "startCol": 37,
        "startLine": 11,
        "startOffset": 551,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input [type]=\\"'text'\\" />",
      "selfClosingSolidus": Object {
        "endCol": 37,
        "endLine": 11,
        "endOffset": 551,
        "raw": " /",
        "startCol": 35,
        "startLine": 11,
        "startOffset": 549,
      },
      "startCol": 13,
      "startLine": 11,
      "startOffset": 527,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 12,
      "endOffset": 565,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 38,
      "startLine": 11,
      "startOffset": 552,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 31,
          "endLine": 12,
          "endOffset": 584,
          "endQuote": Object {
            "endCol": 31,
            "endLine": 12,
            "endOffset": 584,
            "raw": "\\"",
            "startCol": 30,
            "startLine": 12,
            "startOffset": 583,
          },
          "equal": Object {
            "endCol": 24,
            "endLine": 12,
            "endOffset": 577,
            "raw": "=",
            "startCol": 23,
            "startLine": 12,
            "startOffset": 576,
          },
          "isDuplicatable": false,
          "isInvalid": false,
          "name": Object {
            "endCol": 23,
            "endLine": 12,
            "endOffset": 576,
            "raw": "type",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 572,
          },
          "potentialName": "type",
          "raw": "type=\\"radio\\"",
          "spacesAfterEqual": Object {
            "endCol": 24,
            "endLine": 12,
            "endOffset": 577,
            "raw": "",
            "startCol": 24,
            "startLine": 12,
            "startOffset": 577,
          },
          "spacesBeforeEqual": Object {
            "endCol": 23,
            "endLine": 12,
            "endOffset": 576,
            "raw": "",
            "startCol": 23,
            "startLine": 12,
            "startOffset": 576,
          },
          "spacesBeforeName": Object {
            "endCol": 19,
            "endLine": 12,
            "endOffset": 572,
            "raw": "",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 572,
          },
          "startCol": 19,
          "startLine": 12,
          "startOffset": 572,
          "startQuote": Object {
            "endCol": 25,
            "endLine": 12,
            "endOffset": 578,
            "raw": "\\"",
            "startCol": 24,
            "startLine": 12,
            "startOffset": 577,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 30,
            "endLine": 12,
            "endOffset": 583,
            "raw": "radio",
            "startCol": 25,
            "startLine": 12,
            "startOffset": 578,
          },
        },
        Object {
          "endCol": 48,
          "endLine": 12,
          "endOffset": 601,
          "endQuote": Object {
            "endCol": 48,
            "endLine": 12,
            "endOffset": 601,
            "raw": "\\"",
            "startCol": 47,
            "startLine": 12,
            "startOffset": 600,
          },
          "equal": Object {
            "endCol": 42,
            "endLine": 12,
            "endOffset": 595,
            "raw": "=",
            "startCol": 41,
            "startLine": 12,
            "startOffset": 594,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "isInvalid": false,
          "name": Object {
            "endCol": 41,
            "endLine": 12,
            "endOffset": 594,
            "raw": "[checked]",
            "startCol": 32,
            "startLine": 12,
            "startOffset": 585,
          },
          "potentialName": "checked",
          "raw": "[checked]=\\"true\\"",
          "spacesAfterEqual": Object {
            "endCol": 42,
            "endLine": 12,
            "endOffset": 595,
            "raw": "",
            "startCol": 42,
            "startLine": 12,
            "startOffset": 595,
          },
          "spacesBeforeEqual": Object {
            "endCol": 41,
            "endLine": 12,
            "endOffset": 594,
            "raw": "",
            "startCol": 41,
            "startLine": 12,
            "startOffset": 594,
          },
          "spacesBeforeName": Object {
            "endCol": 32,
            "endLine": 12,
            "endOffset": 585,
            "raw": "",
            "startCol": 32,
            "startLine": 12,
            "startOffset": 585,
          },
          "startCol": 32,
          "startLine": 12,
          "startOffset": 585,
          "startQuote": Object {
            "endCol": 43,
            "endLine": 12,
            "endOffset": 596,
            "raw": "\\"",
            "startCol": 42,
            "startLine": 12,
            "startOffset": 595,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 47,
            "endLine": 12,
            "endOffset": 600,
            "raw": "true",
            "startCol": 43,
            "startLine": 12,
            "startOffset": 596,
          },
        },
      ],
      "endCol": 52,
      "endLine": 12,
      "endOffset": 604,
      "endSpace": Object {
        "endCol": 51,
        "endLine": 12,
        "endOffset": 603,
        "raw": "",
        "startCol": 51,
        "startLine": 12,
        "startOffset": 603,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input type=\\"radio\\" [checked]=\\"true\\" />",
      "selfClosingSolidus": Object {
        "endCol": 51,
        "endLine": 12,
        "endOffset": 603,
        "raw": " /",
        "startCol": 49,
        "startLine": 12,
        "startOffset": 601,
      },
      "startCol": 13,
      "startLine": 12,
      "startOffset": 565,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 13,
      "endOffset": 617,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 52,
      "startLine": 12,
      "startOffset": 604,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 32,
          "endLine": 13,
          "endOffset": 637,
          "endQuote": Object {
            "endCol": 32,
            "endLine": 13,
            "endOffset": 637,
            "raw": "\\"",
            "startCol": 31,
            "startLine": 13,
            "startOffset": 636,
          },
          "equal": Object {
            "endCol": 24,
            "endLine": 13,
            "endOffset": 629,
            "raw": "=",
            "startCol": 23,
            "startLine": 13,
            "startOffset": 628,
          },
          "isDuplicatable": false,
          "isInvalid": false,
          "name": Object {
            "endCol": 23,
            "endLine": 13,
            "endOffset": 628,
            "raw": "type",
            "startCol": 19,
            "startLine": 13,
            "startOffset": 624,
          },
          "potentialName": "type",
          "raw": "type=\\"number\\"",
          "spacesAfterEqual": Object {
            "endCol": 24,
            "endLine": 13,
            "endOffset": 629,
            "raw": "",
            "startCol": 24,
            "startLine": 13,
            "startOffset": 629,
          },
          "spacesBeforeEqual": Object {
            "endCol": 23,
            "endLine": 13,
            "endOffset": 628,
            "raw": "",
            "startCol": 23,
            "startLine": 13,
            "startOffset": 628,
          },
          "spacesBeforeName": Object {
            "endCol": 19,
            "endLine": 13,
            "endOffset": 624,
            "raw": "",
            "startCol": 19,
            "startLine": 13,
            "startOffset": 624,
          },
          "startCol": 19,
          "startLine": 13,
          "startOffset": 624,
          "startQuote": Object {
            "endCol": 25,
            "endLine": 13,
            "endOffset": 630,
            "raw": "\\"",
            "startCol": 24,
            "startLine": 13,
            "startOffset": 629,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 31,
            "endLine": 13,
            "endOffset": 636,
            "raw": "number",
            "startCol": 25,
            "startLine": 13,
            "startOffset": 630,
          },
        },
        Object {
          "endCol": 46,
          "endLine": 13,
          "endOffset": 651,
          "endQuote": Object {
            "endCol": 46,
            "endLine": 13,
            "endOffset": 651,
            "raw": "\\"",
            "startCol": 45,
            "startLine": 13,
            "startOffset": 650,
          },
          "equal": Object {
            "endCol": 41,
            "endLine": 13,
            "endOffset": 646,
            "raw": "=",
            "startCol": 40,
            "startLine": 13,
            "startOffset": 645,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "isInvalid": false,
          "name": Object {
            "endCol": 40,
            "endLine": 13,
            "endOffset": 645,
            "raw": "[value]",
            "startCol": 33,
            "startLine": 13,
            "startOffset": 638,
          },
          "potentialName": "value",
          "raw": "[value]=\\"123\\"",
          "spacesAfterEqual": Object {
            "endCol": 41,
            "endLine": 13,
            "endOffset": 646,
            "raw": "",
            "startCol": 41,
            "startLine": 13,
            "startOffset": 646,
          },
          "spacesBeforeEqual": Object {
            "endCol": 40,
            "endLine": 13,
            "endOffset": 645,
            "raw": "",
            "startCol": 40,
            "startLine": 13,
            "startOffset": 645,
          },
          "spacesBeforeName": Object {
            "endCol": 33,
            "endLine": 13,
            "endOffset": 638,
            "raw": "",
            "startCol": 33,
            "startLine": 13,
            "startOffset": 638,
          },
          "startCol": 33,
          "startLine": 13,
          "startOffset": 638,
          "startQuote": Object {
            "endCol": 42,
            "endLine": 13,
            "endOffset": 647,
            "raw": "\\"",
            "startCol": 41,
            "startLine": 13,
            "startOffset": 646,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 45,
            "endLine": 13,
            "endOffset": 650,
            "raw": "123",
            "startCol": 42,
            "startLine": 13,
            "startOffset": 647,
          },
        },
      ],
      "endCol": 50,
      "endLine": 13,
      "endOffset": 654,
      "endSpace": Object {
        "endCol": 49,
        "endLine": 13,
        "endOffset": 653,
        "raw": "",
        "startCol": 49,
        "startLine": 13,
        "startOffset": 653,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input type=\\"number\\" [value]=\\"123\\" />",
      "selfClosingSolidus": Object {
        "endCol": 49,
        "endLine": 13,
        "endOffset": 653,
        "raw": " /",
        "startCol": 47,
        "startLine": 13,
        "startOffset": 651,
      },
      "startCol": 13,
      "startLine": 13,
      "startOffset": 617,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 14,
      "endOffset": 667,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 50,
      "startLine": 13,
      "startOffset": 654,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 21,
      "endLine": 14,
      "endOffset": 675,
      "endSpace": Object {
        "endCol": 20,
        "endLine": 14,
        "endOffset": 674,
        "raw": "",
        "startCol": 20,
        "startLine": 14,
        "startOffset": 674,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "select",
      "raw": "<select>",
      "selfClosingSolidus": Object {
        "endCol": 20,
        "endLine": 14,
        "endOffset": 674,
        "raw": "",
        "startCol": 20,
        "startLine": 14,
        "startOffset": 674,
      },
      "startCol": 13,
      "startLine": 14,
      "startOffset": 667,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 15,
      "endLine": 15,
      "endOffset": 690,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              ",
      "startCol": 21,
      "startLine": 14,
      "startOffset": 675,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 43,
          "endLine": 15,
          "endOffset": 719,
          "endQuote": Object {
            "endCol": 43,
            "endLine": 15,
            "endOffset": 719,
            "raw": "\\"",
            "startCol": 42,
            "startLine": 15,
            "startOffset": 718,
          },
          "equal": Object {
            "endCol": 31,
            "endLine": 15,
            "endOffset": 707,
            "raw": "=",
            "startCol": 30,
            "startLine": 15,
            "startOffset": 706,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "isInvalid": false,
          "name": Object {
            "endCol": 30,
            "endLine": 15,
            "endOffset": 706,
            "raw": "selected",
            "startCol": 22,
            "startLine": 15,
            "startOffset": 698,
          },
          "potentialName": "selected",
          "raw": "selected=\\"{{ true }}\\"",
          "spacesAfterEqual": Object {
            "endCol": 31,
            "endLine": 15,
            "endOffset": 707,
            "raw": "",
            "startCol": 31,
            "startLine": 15,
            "startOffset": 707,
          },
          "spacesBeforeEqual": Object {
            "endCol": 30,
            "endLine": 15,
            "endOffset": 706,
            "raw": "",
            "startCol": 30,
            "startLine": 15,
            "startOffset": 706,
          },
          "spacesBeforeName": Object {
            "endCol": 22,
            "endLine": 15,
            "endOffset": 698,
            "raw": "",
            "startCol": 22,
            "startLine": 15,
            "startOffset": 698,
          },
          "startCol": 22,
          "startLine": 15,
          "startOffset": 698,
          "startQuote": Object {
            "endCol": 32,
            "endLine": 15,
            "endOffset": 708,
            "raw": "\\"",
            "startCol": 31,
            "startLine": 15,
            "startOffset": 707,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 42,
            "endLine": 15,
            "endOffset": 718,
            "raw": "{{ true }}",
            "startCol": 32,
            "startLine": 15,
            "startOffset": 708,
          },
        },
      ],
      "endCol": 45,
      "endLine": 15,
      "endOffset": 720,
      "endSpace": Object {
        "endCol": 44,
        "endLine": 15,
        "endOffset": 719,
        "raw": "",
        "startCol": 44,
        "startLine": 15,
        "startOffset": 719,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "option",
      "raw": "<option selected=\\"{{ true }}\\">",
      "selfClosingSolidus": Object {
        "endCol": 44,
        "endLine": 15,
        "endOffset": 719,
        "raw": "",
        "startCol": 44,
        "startLine": 15,
        "startOffset": 719,
      },
      "startCol": 15,
      "startLine": 15,
      "startOffset": 690,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 54,
      "endLine": 15,
      "endOffset": 729,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "option",
      "raw": "</option>",
      "startCol": 45,
      "startLine": 15,
      "startOffset": 720,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 16,
      "endOffset": 742,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 54,
      "startLine": 15,
      "startOffset": 729,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 22,
      "endLine": 16,
      "endOffset": 751,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "select",
      "raw": "</select>",
      "startCol": 13,
      "startLine": 16,
      "startOffset": 742,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 17,
      "endOffset": 764,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 22,
      "startLine": 16,
      "startOffset": 751,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 18,
      "endLine": 17,
      "endOffset": 769,
      "endSpace": Object {
        "endCol": 17,
        "endLine": 17,
        "endOffset": 768,
        "raw": "",
        "startCol": 17,
        "startLine": 17,
        "startOffset": 768,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "<div>",
      "selfClosingSolidus": Object {
        "endCol": 17,
        "endLine": 17,
        "endOffset": 768,
        "raw": "",
        "startCol": 17,
        "startLine": 17,
        "startOffset": 768,
      },
      "startCol": 13,
      "startLine": 17,
      "startOffset": 764,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 15,
      "endLine": 19,
      "endOffset": 804,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text1
              ",
      "startCol": 18,
      "startLine": 17,
      "startOffset": 769,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 21,
      "endLine": 19,
      "endOffset": 810,
      "endSpace": Object {
        "endCol": 20,
        "endLine": 19,
        "endOffset": 809,
        "raw": "",
        "startCol": 20,
        "startLine": 19,
        "startOffset": 809,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "span",
      "raw": "<span>",
      "selfClosingSolidus": Object {
        "endCol": 20,
        "endLine": 19,
        "endOffset": 809,
        "raw": "",
        "startCol": 20,
        "startLine": 19,
        "startOffset": 809,
      },
      "startCol": 15,
      "startLine": 19,
      "startOffset": 804,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 25,
      "endLine": 19,
      "endOffset": 814,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "Text",
      "startCol": 21,
      "startLine": 19,
      "startOffset": 810,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 32,
      "endLine": 19,
      "endOffset": 821,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "span",
      "raw": "</span>",
      "startCol": 25,
      "startLine": 19,
      "startOffset": 814,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 21,
      "endOffset": 854,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text2
            ",
      "startCol": 32,
      "startLine": 19,
      "startOffset": 821,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 19,
      "endLine": 21,
      "endOffset": 860,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "</div>",
      "startCol": 13,
      "startLine": 21,
      "startOffset": 854,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 11,
      "endLine": 22,
      "endOffset": 871,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 19,
      "startLine": 21,
      "startOffset": 860,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 18,
      "endLine": 22,
      "endOffset": 878,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "body",
      "raw": "</body>",
      "startCol": 11,
      "startLine": 22,
      "startOffset": 871,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 9,
      "endLine": 23,
      "endOffset": 887,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 18,
      "startLine": 22,
      "startOffset": 878,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 16,
      "endLine": 23,
      "endOffset": 894,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "</html>",
      "startCol": 9,
      "startLine": 23,
      "startOffset": 887,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
  ],
}
`;

exports[`parser void element 1`] = `
Object {
  "isFragment": true,
  "nodeList": Array [
    Object {
      "attributes": Array [],
      "endCol": 6,
      "endLine": 1,
      "endOffset": 5,
      "endSpace": Object {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": "",
        "startCol": 5,
        "startLine": 1,
        "startOffset": 4,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "img",
      "raw": "<img>",
      "selfClosingSolidus": Object {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": "",
        "startCol": 5,
        "startLine": 1,
        "startOffset": 4,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
  ],
}
`;

exports[`parser void element 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
